--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <div class="panel panel-white stats-widget">
                                     <div class="panel-body">
                                         <div class="pull-left">
-                                            <span class="stats-number" id="fila_passaportes">781,876</span>
+                                            <span class="stats-number" id="fila_passaportes"></span>
                                             <p class="stats-info" id="pass"></p>
                                         </div>
                                         <div class="pull-right">
@@ -177,7 +177,7 @@
                                 <div class="panel panel-white stats-widget">
                                     <div class="panel-body">
                                         <div class="pull-left">
-                                            <span class="stats-number">578,100</span>
+                                            <span class="stats-number">24</span>
                                             <p class="stats-info" id="dir"></p>
                                         </div>
                                         <div class="pull-right">
@@ -190,7 +190,7 @@
                                 <div class="panel panel-white stats-widget">
                                     <div class="panel-body">
                                         <div class="pull-left">
-                                            <span class="stats-number">+23,356</span>
+                                            <span class="stats-number">12</span>
                                             <p class="stats-info" id="visto"></p>
                                         </div>
                                         <div class="pull-right">
